Regression: Bake to color attributes - target is always the first one (no matter the active index) #98960

Closed
opened 2022-06-17 20:37:02 +02:00 by Jan Kadeřábek · 14 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: 3.1.2
Short description of error
No matter which color attribute is active or set for render, the baking target is always the attribute with index 0 (first one).

Exact steps for others to reproduce the error

Open the attached blend

bake-to-col-attr_always_first.blend

  • Hit Bake
  • Watch how the first attribute (Col) has been updated instead of the second (AO) one (despite it is the one which is active & set for rendering)
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: 3.1.2 **Short description of error** No matter which color attribute is active or set for render, the baking target is always the attribute with index 0 (first one). **Exact steps for others to reproduce the error** # Open the attached blend [bake-to-col-attr_always_first.blend](https://archive.blender.org/developer/F13179969/bake-to-col-attr_always_first.blend) - Hit Bake - Watch how the first attribute (*Col*) has been updated instead of the second (*AO*) one (despite it is the one which is active & set for rendering)

Added subscriber: @JanKaderabek

Added subscriber: @JanKaderabek

#99144 was marked as duplicate of this issue

#99144 was marked as duplicate of this issue

Added subscriber: @Lorenzo-Clerici

Added subscriber: @Lorenzo-Clerici

Added subscriber: @jakasan2000

Added subscriber: @jakasan2000

Yep - I with you guys

Yep - I with you guys
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Might be related to #98861 and #98975.

Might be related to #98861 and #98975.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey self-assigned this 2022-06-20 18:29:59 +02:00
Member

I'll work on this.

I'll work on this.
Philipp Oeser changed title from Bake to color attributes - target is always the first one (no matter the active index) to Regression: Bake to color attributes - target is always the first one (no matter the active index) 2022-06-20 18:31:37 +02:00

This issue was referenced by bcfabdc09d

This issue was referenced by bcfabdc09da77ba2f9b56c27d4555e0d53c20e06

This issue was referenced by d901f8b75b

This issue was referenced by d901f8b75bf83160a962c21566cf29f2f87df8c6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscriber: @Alexander-35

Added subscriber: @Alexander-35
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98960
No description provided.